src/test/resources/ttml/test-suite/fail/ipd003-fail.ttml
<?xml version="1.0" encoding="UTF-8"?>
<!-- DUR > IPD at t = 0 due to rendering -->
<!-- This can only be achieved with CJK characters, otherwise NGBS is exceeded before IPD is exceeded -->
<!-- DUR_T(E_n) = 1 + 1.85/15 * 1.85/15 * (41 / 0.6) > 1 -->
<tt xml:lang="en"
    xmlns="http://www.w3.org/ns/ttml"
    xmlns:tts="http://www.w3.org/ns/ttml#styling">
  <head>
    <styling>
      <style xml:id="s1" tts:backgroundColor="red" />
    </styling>
    <layout>
      <region xml:id="r1" style="s1"/>
    </layout>
  </head>
  <body>
    <div>
      <p region="r1" begin="0s" end="1s"><span style="s1">a</span><span style="s1">b</span><span style="s1">c</span><span style="s1">d</span><span style="s1">e</span><span style="s1">f</span><span style="s1">g</span><span style="s1">h</span><span style="s1">i</span><span style="s1">j</span></p>
    </div>
  </body>
</tt>
